# FinalGraph

./: .gitignore  CMakeLists.txt  run_all.sh
include/: argparser.hpp  bezier.hpp  camera.hpp  channel_tracer.hpp  color.hpp  cube_map.hpp  disperse_tracer.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  merger.hpp  mesh.hpp  noise.hpp  object3d.hpp  octree.hpp  path_tracer.hpp  perlin_noise.hpp  plane.hpp  ray.hpp  ray_tracer.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  tracer.hpp  transform.hpp  triangle.hpp  vector_utils.hpp
src/: cube_map.cpp  image.cpp  main.cpp  material.cpp  mesh.cpp  noise.cpp  octree.cpp  perlin_noise.cpp  ray_tracer.cpp  scene_parser.cpp  texture.cpp
testcases/: scene0.txt  scene00_dragon.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene08_c.txt  scene09_s.txt  scene10_bunny_4k.txt  scene10_sphere.txt  scene11_cube.txt  scene12_vase.txt  scene13_diamond.txt  scene14_new.txt  scene15_refract.txt  scene16_bling.txt  scene16_cornell.txt  scene17_dragon_cornell.txt  scene18_diy.txt  scene19_vase.txt  scene20_diamond.txt
